--- a/sass/main.css
+++ b/sass/main.css
@@ -600,7 +600,7 @@ img {
   display: block;
   margin-bottom: 20px;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 60px;
   margin-left: 0px;
 }
 
@@ -655,7 +655,6 @@ img {
     margin-bottom: 20px;
     text-transform: uppercase;
     margin-left: 0px;
-    padding-top: 60px;
   }
 }
 .section__heading {
@@ -900,9 +899,10 @@ img {
   padding-top: 94px;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  max-width: 100%;
 }
 .lorem-ipsum__content {
+  width: 100%;
   height: 120px;
   border-radius: 4px;
   background-color: var(--background-color);
@@ -912,9 +912,17 @@ img {
   position: relative;
 }
 .lorem-ipsum__icon {
-  width: 100%;
+  width: 70px;
   height: 70px;
   position: absolute;
+}
+.lorem-ipsum__text {
+  max-width: 450px;
+  margin-top: 30px;
+  list-style: none;
+}
+.lorem-ipsum__text {
+  margin-right: 30px;
 }
 .lorem-ipsum__heading {
   font-weight: 700;
@@ -946,7 +954,11 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
   }
+  .lorem-ipsum__item {
+    width: calc(50% - 30px);
+  }
   .lorem-ipsum__content {
+    width: 100%;
     height: 120px;
     border-radius: 4px;
     background-color: var(--background-color);
@@ -961,6 +973,14 @@ img {
     height: 70px;
     position: absolute;
   }
+  .lorem-ipsum__text {
+    width: 270px;
+    margin-top: 30px;
+    list-style: none;
+  }
+  .lorem-ipsum__text:not(:last-child) {
+    margin-right: 30px;
+  }
   .lorem-ipsum__heading {
     font-weight: 700;
     font-size: 14px;
@@ -970,7 +990,7 @@ img {
     display: block;
   }
   .lorem-ipsum__paragraph {
-    width: 100%;
+    max-width: 450px;
     height: 120px;
     line-height: 1.5;
     font-size: 14px;
@@ -1009,6 +1029,14 @@ img {
     height: 70px;
   }
   .lorem-ipsum:not(:last-child) {
+    margin-right: 30px;
+  }
+  .lorem-ipsum__text {
+    width: 270px;
+    margin-top: 30px;
+    list-style: none;
+  }
+  .lorem-ipsum__text:not(:last-child) {
     margin-right: 30px;
   }
   .lorem-ipsum__heading {
@@ -1064,6 +1092,8 @@ img {
 }
 .crew {
   background: #f5f4fa;
+  margin: auto;
+  max-width: 1200px;
 }
 .crew__list {
   display: flex;
@@ -1097,6 +1127,8 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .crew {
     background: #f5f4fa;
+    margin: auto;
+    max-width: 1200px;
   }
   .crew__list {
     display: flex;
@@ -1170,7 +1202,7 @@ img {
 
 .client__link {
   display: flex;
-  max-width: 210px;
+  width: 210px;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1185,7 +1217,7 @@ img {
 }
 
 .client__icon {
-  width: 100%;
+  width: 106px;
   height: 60px;
 }
 
@@ -1205,7 +1237,7 @@ img {
   }
   .client__link {
     display: flex;
-    max-width: 226px;
+    width: 226px;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -1219,7 +1251,7 @@ img {
     border: 1px solid var(--brand-color);
   }
   .client__icon {
-    width: 100%;
+    width: 106px;
     height: 60px;
   }
 }
@@ -1276,9 +1308,6 @@ img {
   margin-bottom: 20px;
   width: 100%;
 }
-.footer-newsletter-form__email {
-  width: 100%;
-}
 
 .newsletter-btn {
   font-family: "Roboto";
@@ -1330,9 +1359,6 @@ img {
     margin-bottom: 20px;
     max-width: 358px;
   }
-  .footer-newsletter-form__email {
-    width: 100%;
-  }
   .newsletter-btn {
     font-family: "Roboto";
     font-style: normal;
@@ -1382,9 +1408,6 @@ img {
     background-color: rgba(0, 0, 0, 0);
     color: #757575;
     padding: 16px;
-    width: 358px;
-  }
-  .footer-newsletter-form__email {
     width: 358px;
   }
   .newsletter-btn {
