--- a/sass/components/_crew-list.scss
+++ b/sass/components/_crew-list.scss
@@ -1,5 +1,7 @@
 .crew {
   background: #f5f4fa;
+  margin: auto;
+  max-width: 1200px;
   &__list {
     display: flex;
     flex-direction: row;
@@ -36,6 +38,8 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .crew {
     background: #f5f4fa;
+    margin: auto;
+    max-width: 1200px;
     &__list {
       display: flex;
       flex-direction: row;
