--- a/sass/components/_client-list.scss
+++ b/sass/components/_client-list.scss
@@ -39,13 +39,13 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
-    max-width: 768px;
+    width: 100%;
     list-style: none;
   }
 
   .client__link {
     display: flex;
-    width: 226px;
+    width: 100%;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -61,7 +61,7 @@
     }
   }
   .client__icon {
-    width: 106px;
+    width: 100%;
     height: 60px;
   }
 }
