--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -10,7 +10,7 @@
     color: var(--secondary-font-color);
     margin-bottom: 4px;
     margin-top: 10px;
-    width: 370px;
+    width: 100%;
 
     &:focus-within {
       fill: var(--brand-color);
@@ -18,7 +18,7 @@
   }
 
   &__textarea {
-    width: 370px;
+    width: 100%;
     height: 120px;
     padding: 12px 18px;
     resize: none;
