--- a/sass/main.css
+++ b/sass/main.css
@@ -988,6 +988,7 @@ img {
     letter-spacing: 0.03;
     margin-bottom: 10px;
     display: block;
+    text-align: start;
   }
   .lorem-ipsum__paragraph {
     max-width: 450px;
@@ -1046,7 +1047,7 @@ img {
     letter-spacing: 0.03;
     margin-bottom: 10px;
     display: block;
-    text-align: left;
+    text-align: start;
   }
   .lorem-ipsum__paragraph {
     width: 270px;
@@ -1232,12 +1233,12 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
-    max-width: 768px;
+    width: 100%;
     list-style: none;
   }
   .client__link {
     display: flex;
-    width: 226px;
+    width: 100%;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -1251,7 +1252,7 @@ img {
     border: 1px solid var(--brand-color);
   }
   .client__icon {
-    width: 106px;
+    width: 100%;
     height: 60px;
   }
 }
@@ -1864,13 +1865,13 @@ img {
   color: var(--secondary-font-color);
   margin-bottom: 4px;
   margin-top: 10px;
-  width: 370px;
+  width: 100%;
 }
 .modal-form__label:focus-within {
   fill: var(--brand-color);
 }
 .modal-form__textarea {
-  width: 370px;
+  width: 100%;
   height: 120px;
   padding: 12px 18px;
   resize: none;
