--- a/sass/components/_client-list.scss
+++ b/sass/components/_client-list.scss
@@ -5,10 +5,12 @@
   gap: 30px;
   list-style: none;
 }
-
+.client__item {
+  width: calc(33% - 30px);
+}
 .client__link {
   display: flex;
-  width: 210px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -24,7 +26,7 @@
   }
 }
 .client__icon {
-  width: 106px;
+  width: 100%;
   height: 60px;
 }
 
@@ -42,7 +44,9 @@
     width: 100%;
     list-style: none;
   }
-
+  .client__item {
+    width: calc(33% - 30px);
+  }
   .client__link {
     display: flex;
     width: 100%;
@@ -70,8 +74,12 @@
     display: flex;
     justify-content: space-between;
     list-style: none;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
-
+  .client__item {
+    width: 100%;
+  }
   .client__link {
     display: flex;
     width: 170px;
