--- a/sass/components/_crew-list.scss
+++ b/sass/components/_crew-list.scss
@@ -10,6 +10,7 @@
   }
   &__item {
     list-style: none;
+    margin-bottom: 30px;
   }
   &__card {
     margin: 0;
@@ -85,6 +86,7 @@
     }
     &__item {
       list-style: none;
+      margin-bottom: 0px;
     }
     &__card {
       margin: 0;
