--- a/sass/components/_wrap.scss
+++ b/sass/components/_wrap.scss
@@ -83,6 +83,8 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
     &__item {
       list-style: none;
@@ -160,6 +162,8 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
+      margin-left: 0px;
+      margin-right: 0px;
     }
     &__item {
       list-style: none;
