--- a/sass/main.css
+++ b/sass/main.css
@@ -206,6 +206,7 @@ img {
   display: flex;
   align-items: center;
   max-width: 100%;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (min-width: 1200px) {
@@ -213,7 +214,6 @@ img {
     background-color: #fff;
     font-weight: 500;
     letter-spacing: 0.02em;
-    border-bottom: 1px solid #ececec;
     min-height: 80px;
     align-items: center;
   }
@@ -690,9 +690,9 @@ img {
 .button__list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 400px;
+  justify-content: flex-start;
+  padding-left: 15px;
+  width: 100%;
 }
 .button .button__item {
   margin-bottom: 15px;
@@ -726,8 +726,8 @@ img {
   }
   .button__list {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
+    margin: 0 auto;
     flex-wrap: none;
     max-width: 700px;
   }
@@ -766,6 +766,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     flex-wrap: none;
+    justify-content: center;
     max-width: 700px;
   }
   .button .button__item {
@@ -910,6 +911,7 @@ img {
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-bottom: 30px;
 }
 .lorem-ipsum__icon {
   width: 70px;
@@ -934,7 +936,6 @@ img {
   text-align: center;
 }
 .lorem-ipsum__paragraph {
-  max-width: 767px;
   height: 120px;
   line-height: 1.5;
   font-size: 14px;
@@ -966,7 +967,6 @@ img {
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-bottom: 30px;
   }
   .lorem-ipsum__icon {
     width: 70px;
@@ -991,7 +991,6 @@ img {
     text-align: start;
   }
   .lorem-ipsum__paragraph {
-    max-width: 450px;
     height: 120px;
     line-height: 1.5;
     font-size: 14px;
@@ -1104,6 +1103,7 @@ img {
 }
 .crew__item {
   list-style: none;
+  margin-bottom: 30px;
 }
 .crew__card {
   margin: 0;
@@ -1172,6 +1172,7 @@ img {
   }
   .crew__item {
     list-style: none;
+    margin-bottom: 0px;
   }
   .crew__card {
     margin: 0;
@@ -1201,9 +1202,13 @@ img {
   list-style: none;
 }
 
+.client__item {
+  width: calc(33% - 30px);
+}
+
 .client__link {
   display: flex;
-  width: 210px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -1218,7 +1223,7 @@ img {
 }
 
 .client__icon {
-  width: 106px;
+  width: 100%;
   height: 60px;
 }
 
@@ -1235,6 +1240,9 @@ img {
     gap: 30px;
     width: 100%;
     list-style: none;
+  }
+  .client__item {
+    width: calc(33% - 30px);
   }
   .client__link {
     display: flex;
@@ -1261,6 +1269,11 @@ img {
     display: flex;
     justify-content: space-between;
     list-style: none;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .client__item {
+    width: 100%;
   }
   .client__link {
     display: flex;
@@ -1451,9 +1464,9 @@ img {
 .button__list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 400px;
+  justify-content: flex-start;
+  padding-left: 15px;
+  width: 100%;
 }
 .button .button__item {
   margin-bottom: 15px;
@@ -1487,8 +1500,8 @@ img {
   }
   .button__list {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: center;
+    margin: 0 auto;
     flex-wrap: none;
     max-width: 700px;
   }
@@ -1527,6 +1540,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     flex-wrap: none;
+    justify-content: center;
     max-width: 700px;
   }
   .button .button__item {
@@ -1644,6 +1658,8 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   .wrap__item {
     list-style: none;
@@ -1714,6 +1730,8 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
   .wrap__item {
     list-style: none;
