--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -44,14 +44,14 @@
   .header-container {
     display: flex;
     align-items: center;
-    max-width: 768px;
+    width: 100%;
     min-height: 80px;
     justify-content: space-around;
     margin: 0 auto;
   }
   .page--footer {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -83,6 +83,7 @@
     max-width: 1200px;
     margin: 0 auto;
     align-items: center;
+    justify-content: space-between;
     padding: 0 15px;
   }
   .header-container {
@@ -94,12 +95,12 @@
 
   .page--footer {
     display: flex;
-    align-items: start;
+    align-items: baseline;
     flex-direction: row;
   }
   .footer-logo {
     min-width: 280px;
-  padding-top: 60px;
+    padding-top: 60px;
     padding-bottom: 60px;
     text-align: start;
   }
@@ -114,7 +115,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
-    margin-left: 78px;
   }
 }
 
