--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -18,9 +18,8 @@
   align-items: center;
 
   &__title {
-    max-width: 365px;
+    width: 100%;
     height: 84px;
-
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
@@ -59,8 +58,6 @@
       ),
       url("/goit-markup-hw-08/images/background/background-tablet.png");
   }
-  
-  
 }
 
 // DESKTOP
