--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,16 @@
   min-height: 60px;
   display: flex;
   align-items: center;
-  max-width: 100%;
+  width: 100%;
   border-bottom: 1px solid #ececec;
 }
-
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .header {
     background-color: #fff;
