--- a/sass/main.css
+++ b/sass/main.css
@@ -121,14 +121,14 @@ img {
   .header-container {
     display: flex;
     align-items: center;
-    max-width: 768px;
+    width: 100%;
     min-height: 80px;
     justify-content: space-around;
     margin: 0 auto;
   }
   .page--footer {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -159,6 +159,7 @@ img {
     max-width: 1200px;
     margin: 0 auto;
     align-items: center;
+    justify-content: space-between;
     padding: 0 15px;
   }
   .header-container {
@@ -169,7 +170,7 @@ img {
   }
   .page--footer {
     display: flex;
-    align-items: start;
+    align-items: baseline;
     flex-direction: row;
   }
   .footer-logo {
@@ -189,7 +190,6 @@ img {
     display: flex;
     flex-direction: column;
     margin-bottom: 0;
-    margin-left: 78px;
   }
 }
 .button-container {
@@ -205,10 +205,17 @@ img {
   min-height: 60px;
   display: flex;
   align-items: center;
-  max-width: 100%;
+  width: 100%;
   border-bottom: 1px solid #ececec;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .header {
     background-color: #fff;
@@ -305,7 +312,7 @@ img {
   align-items: center;
 }
 .banner__title {
-  max-width: 365px;
+  width: 100%;
   height: 84px;
   font-family: "Roboto";
   font-style: normal;
@@ -600,7 +607,7 @@ img {
   display: block;
   margin-bottom: 20px;
   text-align: center;
-  padding-top: 60px;
+  padding-top: 30px;
   margin-left: 0px;
 }
 
@@ -829,8 +836,9 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact-list {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-end;
     margin-right: 0px;
   }
   .contact-list__item {
@@ -1951,6 +1959,7 @@ img {
   width: 100%;
   height: 40px;
   padding-left: 42px;
+  margin-top: 4px;
 }
 
 .modal-form__input:focus,
