--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,14 +3,16 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  position: relative;
+
 
   &__label {
     font-size: 12px;
     color: var(--secondary-font-color);
     margin-bottom: 4px;
     margin-top: 10px;
-    width: 100%;
+    width: 80%;
+    position: relative;
+
 
     &:focus-within {
       fill: var(--brand-color);
@@ -24,6 +26,7 @@
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    margin-top: 4px;
   }
 }
 .label:required {
@@ -43,6 +46,9 @@
   background-color: var(--brand-color);
   border: none;
   background-image: url(../images/checked.svg);
+}
+.privacy-container {
+  width: 80%
 }
 .privacy-container__link {
   color: var(--brand-color);
@@ -79,6 +85,7 @@
   height: 40px;
   padding-left: 42px;
   margin-top: 4px;
+
 }
 
 .modal-form__input:focus,
@@ -100,6 +107,7 @@
   font-weight: 400;
   font-size: 12px;
   display: block;
+
 }
 
 
