--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -46,8 +46,9 @@
     align-items: center;
     width: 100%;
     min-height: 80px;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0 auto;
+    padding: 0px 15px;
   }
   .page--footer {
     display: flex;
