--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/goit-markup-hw-08/images/background/background-mobile.jpg");
+    url("/images/background/background-mobile.jpg");
 
   background-position: center;
   background-repeat: no-repeat;
@@ -19,7 +19,7 @@
 
   &__title {
     width: 100%;
-    height: 84px;
+    
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
@@ -56,7 +56,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/goit-markup-hw-08/images/background/background-tablet.png");
+      url("/images/background/background-tablet.png");
   }
 }
 
@@ -69,7 +69,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/goit-markup-hw-08/images/background/background.jpg");
+      url("/images/background/background.jpg");
 
     background-size: cover;
     background-position: center;
@@ -119,23 +119,23 @@
 @media screen and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .hero {
+  .banner {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/goit-markup-hw-08/images/background/background-mobilex2.jpg");
+      url("/images/background/background-mobilex2.jpg");
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2),
   screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi),
   screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
-  .hero {
+  .banner {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/goit-markup-hw-08/images/background/background-tabletx2.png");
+      url("/images/background/background-tabletx2.png");
   }
 }
