--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -4,7 +4,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("/images/background/background-mobile.jpg");
+    url("../images/background/background-mobile.jpg");
 
   background-position: center;
   background-repeat: no-repeat;
@@ -56,7 +56,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/background/background-tablet.png");
+      url("../images/background/background-tablet.png");
   }
 }
 
@@ -69,7 +69,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/background/background.jpg");
+      url("../images/background/background.jpg");
 
     background-size: cover;
     background-position: center;
@@ -124,7 +124,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/background/background-mobilex2.jpg");
+      url("../images/background/background-mobilex2.jpg");
   }
 }
 
@@ -136,6 +136,6 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/background/background-tabletx2.png");
+      url("../images/background/background-tabletx2.png");
   }
 }
