--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ img {
 }
 .banner {
   background-color: var(--background-theme);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-mobile.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -343,13 +343,13 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .banner {
     background-color: var(--background-theme);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-tablet.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-tablet.png");
   }
 }
 @media screen and (min-width: 1200px) {
   .banner {
     background-color: var(--background-theme);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background.jpg");
     background-size: cover;
     background-position: center;
     max-width: 1600px;
@@ -392,12 +392,12 @@ img {
 }
 @media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .banner {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-mobilex2.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-mobilex2.jpg");
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .banner {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-tabletx2.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/background-tabletx2.png");
   }
 }
 .footer {
@@ -1086,7 +1086,6 @@ img {
 .crew {
   background: #f5f4fa;
   margin: auto;
-  max-width: 1200px;
 }
 .crew__list {
   display: flex;
@@ -1123,7 +1122,6 @@ img {
   .crew {
     background: #f5f4fa;
     margin: auto;
-    max-width: 1200px;
   }
   .crew__list {
     display: flex;
@@ -1817,7 +1815,6 @@ img {
   transform: translate(-50%, -50%) scale(1.25);
   background-color: #fff;
   width: 70%;
-  height: 609px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
@@ -1882,6 +1879,7 @@ img {
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  padding-bottom: 40px;
 }
 .modal-form__label {
   font-size: 12px;
