--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
+  padding-bottom: 40px;
 
   &__label {
     font-size: 12px;
